# db-analyzer

./: .gitignore  README.md  config.py  flagr.json  input.json  main.py  pyproject.toml  settings.toml  tpch.json
analyzer/: __init__.py  analyzer.py  command.py  node.py  result.py
cmd/: __init__.py
config/: __init__.py  config.py
domain/: __init__.py  action.py  plan.py  query.py  schema.py  suggestion.py
domain/entities/: action.py  plan.py  query.py  result.py  schema.py  suggestion.py
executor/: __init__.py  executor.py  new.py
executor/postgresql/: __init__.py  column_tetris.py  executor.py
executor/postgresql/_commands/: index.py  materialized_view.py
executor/sqlserver/: __init__.py  executor.py
executor/sqlserver/_commands/: __init__.py  index.py
executors/postgresql/: __init__.py  commands.py  custom.py  executor.py
executors/postgresql/_commands/: __init__.py  materialized_view.py
executors/postgresql/commands/: index.py  materialized_view.py
querydb/: __init__.py  db.py
store/: __init__.py  inserts.py  store.py
