[tool.poetry]
name = "db-analyzer"
version = "0.1.0"
description = ""
authors = ["victorsouza <victoraugustolls@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
asyncpg = "^0.24.0"
uvloop = "^0.16.0"
dynaconf = "^3.1.7"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
